@@ -1,4 +1,4 @@
-Copyright (C) 2007 Christopher Lenz
+Copyright (C) 2007-2008 Christopher Lenz
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
